# magic-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md  generate.py  xmake.lua
docs/: type.md
include/magic/: customization.h  customized_type_name.h  enum.h  field_count.h  function_traits.h  macro.h  parse.h  parse_template.ge  raw_name.h  string.h  string_view.h  struct.h  struct_bind_of_field_types.ge  struct_field.ge  struct_field_type.ge  template_traits.h  type.h  type_traits.h  type_tree.h  visualize.h
include/magic/generate/: struct_bind_of_field_access.code  template.code  template_parse.code
script/: parse_template.py  raw_name.py  struct_bind.py  template.py
test/: enum.cpp  field_count.cpp  field_count_test.cpp  function_traits_test.cpp  main.cpp  raw_name_test.cpp  struct.cpp  template_traits_test.cpp  type.cpp
